@@ -226,6 +226,8 @@ void _starpu_codelet_check_deprecated_fields(struct starpu_codelet *cl)
 	if (!cl)
 		return;
 
+	int is_where_unset = cl->where == 0;
+
 	/* Check deprecated and unset fields (where, <device>_func,
  	 * <device>_funcs) */
 
@@ -244,12 +246,10 @@ void _starpu_codelet_check_deprecated_fields(struct starpu_codelet *cl)
 	{
 		cl->cpu_func = STARPU_MULTIPLE_CPU_IMPLEMENTATIONS;
 	}
-#if 0
-	if (cl->cpu_funcs[0])
+	if (cl->cpu_funcs[0] && is_where_unset)
 	{
 		cl->where |= STARPU_CPU;
 	}
-#endif
 
 	/* CUDA */
 	if (cl->cuda_func && cl->cuda_func != STARPU_MULTIPLE_CUDA_IMPLEMENTATIONS && cl->cuda_funcs[0])
@@ -266,12 +266,10 @@ void _starpu_codelet_check_deprecated_fields(struct starpu_codelet *cl)
 	{
 		cl->cuda_func = STARPU_MULTIPLE_CUDA_IMPLEMENTATIONS;
 	}
-#if 0
-	if (cl->cuda_funcs[0])
+	if (cl->cuda_funcs[0] && is_where_unset)
 	{
 		cl->where |= STARPU_CUDA;
 	}
-#endif
 
 	/* OpenCL */
 	if (cl->opencl_func && cl->opencl_func != STARPU_MULTIPLE_OPENCL_IMPLEMENTATIONS && cl->opencl_funcs[0])
@@ -288,12 +286,10 @@ void _starpu_codelet_check_deprecated_fields(struct starpu_codelet *cl)
 	{
 		cl->opencl_func = STARPU_MULTIPLE_OPENCL_IMPLEMENTATIONS;
 	}
-#if 0
-	if (cl->opencl_funcs[0])
+	if (cl->opencl_funcs[0] && is_where_unset)
 	{
 		cl->where |= STARPU_OPENCL;
 	}
-#endif
 
 	/* Gordon */
 	if (cl->gordon_func && cl->gordon_func != STARPU_MULTIPLE_GORDON_IMPLEMENTATIONS)
@@ -305,12 +301,10 @@ void _starpu_codelet_check_deprecated_fields(struct starpu_codelet *cl)
 	{
 		cl->gordon_func = STARPU_MULTIPLE_GORDON_IMPLEMENTATIONS;
 	}
-#if 0
-	if (cl->gordon_funcs[0])
+	if (cl->gordon_funcs[0] && is_where_unset)
 	{
 		cl->where = STARPU_GORDON;
 	}
-#endif
 }
 
 void _starpu_task_check_deprecated_fields(struct starpu_task *task)
